[gd_scene load_steps=26 format=3 uid="uid://bu1fmvdwkuhr0"]

[ext_resource type="Script" uid="uid://4ukt326qfoi3" path="res://Scenes/scene12.gd" id="1_nj7m8"]
[ext_resource type="Texture2D" uid="uid://bvwai7tysst01" path="res://graphics/Cave.png" id="2_nj7m8"]
[ext_resource type="PackedScene" uid="uid://dejs7fyatuaui" path="res://Scenes/Bear.tscn" id="3_oll2t"]
[ext_resource type="FontFile" uid="uid://cg7cgxd42u3a5" path="res://fonts/PixelOperator8.ttf" id="4_h4n8a"]
[ext_resource type="Script" uid="uid://8752xqqpewcs" path="res://Scenes/scene12to13.gd" id="5_5bjqc"]
[ext_resource type="Texture2D" uid="uid://myvbhfm7yko7" path="res://graphics/Scarf.png" id="6_lgtbx"]
[ext_resource type="Texture2D" uid="uid://cjurf5c35o134" path="res://graphics/Headphone.png" id="7_buv8g"]
[ext_resource type="Texture2D" uid="uid://cp56ugi21g6ye" path="res://graphics/TeddyBear.png" id="8_lgtbx"]
[ext_resource type="Script" uid="uid://k7nphqkptfpm" path="res://Scenes/transition.gd" id="9_5bjqc"]
[ext_resource type="Texture2D" uid="uid://co8g772aa4770" path="res://graphics/pile.png" id="10_lgtbx"]
[ext_resource type="Texture2D" uid="uid://dm7yvjyl45om8" path="res://graphics/pfp/textplaceholder.png" id="11_vvpnt"]
[ext_resource type="Texture2D" uid="uid://ceuwssco6htey" path="res://graphics/pfp/pfpplaceholder.png" id="12_wyx4r"]
[ext_resource type="Texture2D" uid="uid://cxlhmv0fg77x2" path="res://graphics/pfp/robberpfp.png" id="13_a0s3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmg1m"]
size = Vector2(73, 764)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltkk0"]
size = Vector2(1324, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arvwu"]
size = Vector2(1360.5, 444)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ngrw"]
size = Vector2(88.5, 293)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucdt6"]
size = Vector2(50, 294.5)

[sub_resource type="Animation" id="Animation_5bjqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../S12-text3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_buv8g"]
resource_name = "cutscene"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../S12-text3:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../S12-text3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buv8g"]
_data = {
&"RESET": SubResource("Animation_5bjqc"),
&"cutscene": SubResource("Animation_buv8g")
}

[sub_resource type="Animation" id="Animation_vvpnt"]
resource_name = "S12-text4"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_wyx4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a0s3e"]
resource_name = "S12-text5"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0s3e"]
_data = {
&"RESET": SubResource("Animation_wyx4r"),
&"S12-text4": SubResource("Animation_vvpnt"),
&"S12-text5": SubResource("Animation_a0s3e")
}

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_nj7m8")

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2(647.5, 354.5)
scale = Vector2(1.02109, 1.04028)
texture = ExtResource("2_nj7m8")

[node name="border" type="Node2D" parent="."]

[node name="Area2D2" type="StaticBody2D" parent="border"]
position = Vector2(650, 733.5)

[node name="leftWall" type="CollisionShape2D" parent="border/Area2D2"]
position = Vector2(-646, -379.5)
shape = SubResource("RectangleShape2D_tmg1m")

[node name="Area2D" type="StaticBody2D" parent="border"]
position = Vector2(650, 733.5)

[node name="bottomWall" type="CollisionShape2D" parent="border/Area2D"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_ltkk0")

[node name="Area2D3" type="StaticBody2D" parent="border"]

[node name="topWall" type="CollisionShape2D" parent="border/Area2D3"]
position = Vector2(645.5, 173)
shape = SubResource("RectangleShape2D_arvwu")

[node name="S5-text1" type="Label" parent="."]
offset_left = 11.0
offset_top = 696.0
offset_right = 491.0
offset_bottom = 720.0
theme_override_fonts/font = ExtResource("4_h4n8a")
theme_override_font_sizes/font_size = 16
text = "to drop the item, press the spacebar."
max_lines_visible = 1

[node name="CharacterBody2D" parent="." instance=ExtResource("3_oll2t")]
position = Vector2(1242, 573)

[node name="ExitTrigger" type="Area2D" parent="."]
script = ExtResource("5_5bjqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitTrigger"]
position = Vector2(1319, 566.5)
shape = SubResource("RectangleShape2D_2ngrw")

[node name="Node" type="Node" parent="."]

[node name="Scarf" type="Sprite2D" parent="."]
position = Vector2(616, 665)
scale = Vector2(2.1875, 2.40625)
texture = ExtResource("6_lgtbx")

[node name="ExitBlocker" type="StaticBody2D" parent="."]

[node name="WallShape" type="CollisionShape2D" parent="ExitBlocker"]
position = Vector2(1284, 566)
shape = SubResource("RectangleShape2D_ucdt6")

[node name="Headphone" type="Sprite2D" parent="."]
position = Vector2(728, 679)
scale = Vector2(2.55469, 2.55469)
texture = ExtResource("7_buv8g")

[node name="TeddyBear" type="Sprite2D" parent="."]
position = Vector2(844, 651)
scale = Vector2(2.82812, 2.82812)
texture = ExtResource("8_lgtbx")

[node name="transition" type="CanvasLayer" parent="."]
script = ExtResource("9_5bjqc")

[node name="ColorRect" type="ColorRect" parent="transition"]
modulate = Color(1, 1, 1, 0)
offset_left = -15.0
offset_top = -6.0
offset_right = 1296.0
offset_bottom = 730.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition/ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_buv8g")
}

[node name="S12-text3" type="Label" parent="transition"]
visible = false
offset_left = 32.0
offset_top = 189.0
offset_right = 1255.0
offset_bottom = 556.0
theme_override_fonts/font = ExtResource("4_h4n8a")
theme_override_font_sizes/font_size = 32
text = "After countless heists, 

the woodland creatures 

had been stripped of all they had."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pile" type="Sprite2D" parent="."]
visible = false
position = Vector2(271, 497)
scale = Vector2(8.88281, 8.88281)
texture = ExtResource("10_lgtbx")

[node name="Textplaceholder" type="Sprite2D" parent="."]
visible = false
position = Vector2(665.905, 40.0625)
scale = Vector2(9.36309, 5.56445)
texture = ExtResource("11_vvpnt")

[node name="Pfpplaceholder" type="Sprite2D" parent="."]
visible = false
position = Vector2(158.75, 91)
scale = Vector2(2.98437, 2.98437)
texture = ExtResource("12_wyx4r")

[node name="Robberpfp" type="Sprite2D" parent="."]
visible = false
position = Vector2(155.75, 128)
scale = Vector2(4.46094, 4.46094)
texture = ExtResource("13_a0s3e")

[node name="S12-text4" type="Label" parent="."]
visible = false
offset_left = 273.0
offset_top = 49.0
offset_right = 1095.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("4_h4n8a")
theme_override_font_sizes/font_size = 24
text = "\"This forest is full of weaklings. 
Everything is mine to take.\""
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="S12-text4"]
libraries = {
&"": SubResource("AnimationLibrary_a0s3e")
}
autoplay = "S12-text4"

[node name="S12-text5" type="Label" parent="."]
visible = false
offset_left = 273.0
offset_top = 49.0
offset_right = 1095.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("4_h4n8a")
theme_override_font_sizes/font_size = 24
text = "\"Maybe I'll scout the area one more time.
Thereâ€™s never enough to satisfy me...\""
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="S12-text5"]
libraries = {
&"": SubResource("AnimationLibrary_a0s3e")
}
autoplay = "S12-text4"

[node name="S5-text2" type="Label" parent="."]
visible = false
offset_left = 497.0
offset_top = 250.0
offset_right = 841.0
offset_bottom = 303.0
theme_override_fonts/font = ExtResource("4_h4n8a")
theme_override_font_sizes/font_size = 32
text = "Exit the cave."

[connection signal="body_entered" from="ExitTrigger" to="ExitTrigger" method="_on_body_entered"]
[connection signal="body_exited" from="ExitTrigger" to="ExitTrigger" method="_on_body_exited"]
